# uav-detection

./: ProjectHome.md  README.md
Media/models/: rock_4.dae  terrain3.dae  terrain4.dae  traffic_bollard.dae
Media/models/stl/: chair_wood.stl  plant4.stl  ps3_control.stl  traffic_bollard.stl
drone_GPS/: CMakeLists.txt  Readme
drone_GPS/msg/: GPS_data.msg
drone_GPS/msg_gen/cpp/include/drone_GPS/: GPS_data.h
drone_GPS/src/: GPS_test.cpp
drone_GPS/src/drone_GPS/msg/: _GPS_data.py
drone_detection/: CMakeLists.txt  manifest.xml
drone_detection/launch/: GUI.launch  control.launch  detection.launch  navigation.launch
drone_detection/src/: detection.cpp  record.cpp
drone_detection/src/GUI/: detection_gui.h  detection_gui.pro  detection_gui.ui  main.cpp
landmine_zone_gazebo/Media/models/: Laptop.dae  plant2.dae  plant3.dae  plant4.dae  portable_table.dae  ps3_control.dae  rock_1.dae  rock_3.dae  rock_5.dae  rock_6.dae  tent.dae  terrain1.dae  terrain3.dae  terrain5.dae  terrain6.dae  tree_1.dae  tree_2.dae  tuna_can_2.dae
landmine_zone_gazebo/Media/models/stl/: pond.stl  race.stl  rock_2.stl  rock_4.stl  terrain3.stl  terrain4.stl  terrain5.stl  terrain6.stl  tuna_can_2.stl
landmine_zone_gazebo/launch/: race.launch  terrain_2.launch  terrain_6.launch
landmine_zone_gazebo/models/: ground_plane.model  leaf_1.model  plant3.model  ps3_control.model  rock_4.model  rock_5.model  rock_6.model  rock_7.model  terrain_1.model  terrain_2.model  terrain_3.model  terrain_4.model  terrain_5.model  terrain_6.model  tree_1.model  tree_2.model  tree_3.model  tree_4.model  tuna_can.model
landmine_zone_gazebo/worlds/: race.world
launch/: terrain_3.launch
models/: Laptop.model  plant.model  tent.model
msg_gen/lisp/: GPS_data.lisp
stitching_panoramic/: CMakeLists.txt  manifest.xml
stitching_panoramic/launch/: parcial_mosaic.launch
trunk/: CMakeLists.txt
trunk/Media/models/: plant.dae
trunk/Media/models/stl/: plant3.stl  rock_1.stl  rock_3.stl  rock_5.stl  rock_7.stl  terrain1.stl  terrain3.stl
trunk/drone_GPS/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/drone_GPS/launch/: test.launch
trunk/drone_GPS/msg_gen/lisp/: _package.lisp
trunk/drone_GPS/src/: UTM_converter.cpp
trunk/drone_detection/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/drone_detection/launch/: record.launch
trunk/drone_detection/src/: detection.cpp  record.cpp  record2.cpp
trunk/drone_detection/src/GUI/: detection_gui.cpp
trunk/landmine_zone_gazebo/: mainpage.dox  manifest.xml  tuna_cans_location
trunk/landmine_zone_gazebo/Media/models/: chair_wood.dae  leaf_1.dae  rock_2.dae  rock_7.dae  terrain2.dae  terrain4.dae  torre4.dae
trunk/landmine_zone_gazebo/Media/models/stl/: Laptop.stl  leaf_1.stl  plant.stl  plant2.stl  portable_table.stl  rock_6.stl  tent.stl  terrain2.stl  torre4.stl  tree_1.stl  tree_2.stl
trunk/landmine_zone_gazebo/launch/: terrain_1.launch  terrain_4.launch  terrain_5.launch
trunk/landmine_zone_gazebo/models/: plant4.model  pond.model  portable_table.model  race.model  rock_2.model  rock_3.model  terrain_1.model  tower_1.model  traffic_bollard.model  wood_chair.model
trunk/landmine_zone_gazebo/worlds/: terrain_1.world  terrain_2.world  terrain_3.world  terrain_4.world  terrain_5.world  terrain_6.world
trunk/models/: plant2.model  rock_1.model
trunk/msg_gen/lisp/: _package_GPS_data.lisp  drone_GPS-msg.asd
trunk/src/drone_GPS/msg/: __init__.py
trunk/stitching_panoramic/: CMakeLists.txt  mainpage.dox
trunk/stitching_panoramic/launch/: complete_mosaic.launch
trunk/stitching_panoramic/src/: complete_mosaic.cpp  parcial_mosaic.cpp
